// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 В каталоге должны отображаться товары, список которых приходит с сервера 1`] = `
<div
  class="col-12 col-sm-6 col-md-4 col-lg-3"
  data-testid="123"
>
  <div
    class="ProductItem card w-100 mb-4"
    data-testid="123"
  >
    <img
      class="Image card-img-top"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
    />
    <div
      class="card-body"
    >
      <h5
        class="ProductItem-Name card-title"
      >
        chair
      </h5>
      <p
        class="ProductItem-Price card-text"
      >
        $
        200
      </p>
      <a
        class="ProductItem-DetailsLink card-link"
        href="/catalog/123"
      >
        Details
      </a>
    </div>
  </div>
</div>
`;

exports[`1 В каталоге должны отображаться товары, список которых приходит с сервера 2`] = `
<div
  class="col-12 col-sm-6 col-md-4 col-lg-3"
  data-testid="124"
>
  <div
    class="ProductItem card w-100 mb-4"
    data-testid="124"
  >
    <img
      class="Image card-img-top"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
    />
    <div
      class="card-body"
    >
      <h5
        class="ProductItem-Name card-title"
      >
        pants
      </h5>
      <p
        class="ProductItem-Price card-text"
      >
        $
        1000
      </p>
      <a
        class="ProductItem-DetailsLink card-link"
        href="/catalog/124"
      >
        Details
      </a>
    </div>
  </div>
</div>
`;
